# Polyray.Rasterization

./: CMakeLists.txt  README.md  raster.ppm
data/: balls.pi  balls3-color.pi  balls3.pi  tetra.pi  tree.pi
src/: Light.cpp  Light.hpp  Mat.hpp  Mat.inl  Object.hpp  Raster.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Surface.cpp  Surface.hpp  Triangle.cpp  Triangle.hpp  Vec.hpp  Vec.inl  World.cpp  World.hpp
